--- a/src/index.css
+++ b/src/index.css
@@ -106,9 +106,15 @@
     @apply border-border;
   }
 
-  body {
-    @apply bg-background text-foreground font-light;
-  }
+    body {
+        @apply bg-background text-foreground font-light;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23000' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 -40 734 53 874 309 963z'/%3E%3Cpath d='M-31 465L-31 737 102 782 231 782 580 963-31 963z'/%3E%3Cpath d='M-155 901L-155 737 231 737 231 963z'/%3E%3Cpath d='M883 300L883 660 731 737z'/%3E%3Cpath d='M1034 300L1034 660 883 737z'/%3E%3Cpath d='M-40 465L-40 963 102 963z'/%3E%3Cpath d='M-155 465L-155 963 102 963z'/%3E%3Cpath d='M102 465L102 963z'/%3E%3Cpath d='M883 300L883 963 731 963z'/%3E%3Cpath d='M-155 229L-155 963 231 963z'/%3E%3Cpath d='M-40 229L-40 963 231 963z'/%3E%3Cpath d='M102 229L102 963z'/%3E%3Cpath d='M231 229L231 963z'/%3E%3Cpath d='M430 229L430 963z'/%3E%3Cpath d='M580 229L580 963z'/%3E%3Cpath d='M731 229L731 963z'/%3E%3Cpath d='M-155-15L-155 963 883 963 883-15z'/%3E%3C/g%3E%3Cg fill='%23000'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='53' cy='261' r='5'/%3E%3Ccircle cx='620' cy='261' r='5'/%3E%3Ccircle cx='309' cy='398' r='5'/%3E%3Ccircle cx='-40' cy='465' r='5'/%3E%3Ccircle cx='231' cy='465' r='5'/%3E%3Ccircle cx='883' cy='465' r='5'/%3E%3Ccircle cx='430' cy='465' r='5'/%3E%3Ccircle cx='102' cy='465' r='5'/%3E%3Ccircle cx='-155' cy='465' r='5'/%3E%3Ccircle cx='580' cy='465' r='5'/%3E%3Ccircle cx='731' cy='465' r='5'/%3E%3C/g%3E%3C/svg%3E");
+        background-size: 800px 800px;
+        background-color: hsl(var(--background));
+        background-attachment: fixed;
+        opacity: 1;
+        background-blend-mode: color-burn;
+    }
   
   /* Typography scale */
   h1 {
