--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import 'react-big-calendar/lib/css/react-big-calendar.css';
 @import 'react-quill/dist/quill.snow.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
